# top-open-subtitles-sentences

./: .gitignore  README.md  pyproject.toml
bld/: total_counts_sentences.csv  total_counts_words.csv
bld/original_language_only/: de_sentence_rank_comparison.csv  de_word_rank_comparison.csv  en_sentence_rank_comparison.csv  en_word_rank_comparison.csv  es_sentence_rank_comparison.csv  es_word_rank_comparison.csv  ja_sentence_rank_comparison.csv  total_counts_sentences.csv  total_counts_words.csv
bld/top_sentences/: af_top_sentences.csv  ar_top_sentences.csv  bg_top_sentences.csv  bn_top_sentences.csv  br_top_sentences.csv  bs_top_sentences.csv  ca_top_sentences.csv  cs_top_sentences.csv  da_top_sentences.csv  de_top_sentences.csv  el_top_sentences.csv  en_top_sentences.csv  eo_top_sentences.csv  es_top_sentences.csv  et_top_sentences.csv  eu_top_sentences.csv  fa_top_sentences.csv  fi_top_sentences.csv  fr_top_sentences.csv  gl_top_sentences.csv  he_top_sentences.csv  hi_top_sentences.csv  hr_top_sentences.csv  hu_top_sentences.csv  hy_top_sentences.csv  id_top_sentences.csv  is_top_sentences.csv  it_top_sentences.csv  ja_top_sentences.csv  ka_top_sentences.csv  kk_top_sentences.csv  ko_top_sentences.csv  lt_top_sentences.csv  lv_top_sentences.csv  mk_top_sentences.csv  ml_top_sentences.csv  ms_top_sentences.csv  nl_top_sentences.csv  no_top_sentences.csv  pl_top_sentences.csv  (+22 more)
bld/top_words/: af_top_words.csv  ar_top_words.csv  bg_top_words.csv  bn_top_words.csv  br_top_words.csv  (+57 more)
src/: extract_sentences.py  runall.py  tests.py  top_open_subtitles_sentences.py
(+21 files in other folders)
