[tool.poetry]
name = "top-open-subtitles-sentences"
version = "0.1.0"
description = ""
authors = [""]


[tool.poetry.dependencies]
python = ">=3.8,<4"
pandas = "^1.5.0"
requests = "^2.28.1"
pyarrow = "^9.0.0"
spacy = "^3.4.2"
SudachiPy = "^0.6.6"
SudachiDict-core = "^20221021"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
